[build-system]
requires = [
    "setuptools >= 61.0",
    "setuptools-scm>=8.0"
]
build-backend = "setuptools.build_meta"

[project]
name = "lsw"
version = "0.0.1"
authors = [
    {name = "Arthur Coqué", email = "arthur.coque@inrae.fr"},
]
readme = "README.md"
dependencies = [
    "kaleido",
    "numpy",
    "pandas",
    "plotly",
    "pvlib",
    "rich",
    "scipy",
    "tinkerforge",
    "typer",
    "xarray",
]

[project.scripts]
lsw = "lsw.cli:app"

[tool.setuptools.package-data]
"*" = ["*/*/*.dat", "*/*/*/ini"]

[tool.setuptools_scm]
