[build-system]
requires = [
    "setuptools >= 61.0",
    "setuptools-scm>=8.0"
]
build-backend = "setuptools.build_meta"

[project]
name = "lsw"
version = "0.0.1"
dependencies = [
    "kaleido",
    "numpy",
    "pandas",
    "plotly",
    "pvlib",
    "rich",
    "scipy",
    "tinkerforge",
    "typer",
    "xarray",
]
authors = [
    {name = "Arthur Coqué", email = "arthur.coque@inrae.fr"},
]
readme = "README.md"
classifiers = [
    "Programmming Language :: Python",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
]

[project.urls]
Repository = "https://github.com/inrae/Lake-SkyWater/tree/main/code"

[project.scripts]
lsw = "lsw.cli:app"

[tool.setuptools.package-data]
"*" = ["*/*/*.dat", "*/*/*/ini"]

[tool.setuptools_scm]
